--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "minimist": "^1.2.8",
     "mongodb": "^5.1.0",
     "mongoose": "^7.0.3",
-    "nodemailer": "^6.9.1"
+    "nodemailer": "^6.9.1",
     "twilio": "^4.20.0"
   },
   "devDependencies": {
