--- a/ProyectoFinalBackend/backend/package.json
+++ b/ProyectoFinalBackend/backend/package.json
@@ -3,8 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
+  "type": "module",
   "scripts": {
-    "test": "mocha --require @babel/register --exit 'src/test/*.test.js'",
+    "test": "mocha --require @babel/register --exit 'src/test/*.test.mjs'",
     "start": "node src/server.js -e production",
     "dev": "nodemon src/server.js"
   },
