--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
+  "type": "module",
   "scripts": {
-    "test": "mocha --require @babel/register --exit 'src/test/*.test.js'",
+    "test": "mocha --require @babel/register --exit 'src/test/*.test.mjs'",
     "start": "node src/server.js -e production",
     "dev": "nodemon src/server.js"
   },
@@ -29,8 +30,8 @@
     "twilio": "^4.20.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.17.8",
     "@babel/cli": "^7.17.8",
+    "@babel/core": "^7.17.8",
     "@babel/preset-env": "^7.17.8",
     "@babel/register": "^7.17.8",
     "chai": "^5.0.3",
