--- a/ProyectoFinalBackend/backend/package.json
+++ b/ProyectoFinalBackend/backend/package.json
@@ -24,6 +24,7 @@
     "minimist": "^1.2.8",
     "mongodb": "^5.1.0",
     "mongoose": "^7.0.3",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.1",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0",
