--- a/ProyectoFinalBackend/package.json
+++ b/ProyectoFinalBackend/package.json
@@ -4,6 +4,7 @@
     "@stripe/stripe-js": "^3.0.3",
     "compression": "^1.7.4",
     "express-compression": "^1.0.2",
-    "faker": "^6.6.6"
+    "faker": "^6.6.6",
+    "swagger-jsdoc": "^6.2.8"
   }
 }
