--- a/ProyectoFinalBackend/package.json
+++ b/ProyectoFinalBackend/package.json
@@ -6,5 +6,10 @@
     "express-compression": "^1.0.2",
     "faker": "^6.6.6",
     "swagger-jsdoc": "^6.2.8"
+  },
+  "devDependencies": {
+    "chai": "^5.1.0",
+    "mocha": "^10.3.0",
+    "supertest": "^6.3.4"
   }
 }
